# weatherapi

./: .coverage  Dockerfile  README.md  pyproject.toml
tests/: conftest.py
tests/end2end/: test_endpoint.py
tests/unit/: test_logic.py
tests/unit/adapter/: test_adapter.py  test_weather_build.py  test_weather_service.py
weatherapi/: __init__.py  app.py  router.py  settings.py
weatherapi/infrastructure/adapters/: adapter.py  builder.py  http_adapter.py  remote_endpoint.py
weatherapi/models/: weather_model.py
